k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tasks-app
spec:
  clusterIP: None
  ports:
    - port: 5432
  selector:
    app: postgres
